force-app/main/default/objects/AuditTrailWatcherEvent__e/AuditTrailWatcherEvent__e.object-meta.xml
<CustomObject>
    <label>Audit Trail Watcher Event</label>
    <pluralLabel>Audit Trail Watcher Events</pluralLabel>
</CustomObject>