force-app/main/default/objects/AuditTrailWatcherEvent__e/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>Created By ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>