force-app/main/default/objects/AuditTrailWatcherEvent__e/fields/DelegateUser__c.field-meta.xml
<CustomField>
    <fullName>DelegateUser__c</fullName>
    <label>Delegate User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>